# yuri-music

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  Agents.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cmake/: bass.cmake  qq-music-api.cmake  web-view2.cmake  yuri-lib.cmake
docs/: style.md
libs/: bass24.cppm
src/: main.cpp
src/components/: components.cppm  menu_button.cppm  page_view.cppm  player_bar.cppm  quick_card.cppm  section_header.cppm  song_item.cppm  user_profile_card.cppm
src/models/: models.cppm  song.cppm  user_profile.cppm
src/pages/: browse.cppm  favorites.cppm  home.cppm  library.cppm  pages.cppm  recent.cppm  search.cppm  settings.cppm
src/store/: store.cppm  user_profile_store.cppm
src/tools/: webview2.cppm
src/views/: main_window.cppm  page_view.cppm
